# Imephemeral

./: .gitignore  Anchor.toml  index.js  package-lock.json  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/frontend/: .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
app/frontend/src/: App.tsx  global-shim.ts  index.css  main.tsx
app/frontend/src/atoms/: characterPdaAtom.ts
app/frontend/src/components/: Account.tsx  Character.tsx  CharacterOnchain.tsx  Controller.tsx  ControllerOnchain.tsx  CooldownTimer.tsx  FundModal.tsx  GameLoop.tsx  GameLoopOnchain.tsx  InitializeRoom.tsx  LockIndicators.tsx  MazeDemo.tsx  MazeGenerator.tsx  PartykitVersion.tsx  Room.tsx  RoomTest.tsx  Splash.tsx  WalletAdapter.tsx
app/frontend/src/engine/: MagicBlockEngine.ts  MagicBlockEngineWrapper.tsx  characterListen.ts  createCharacter.ts  programs.ts  roomListen.ts  systemAttack.ts  systemBlockAttack.ts  systemMove.ts  systemSpawn.ts  systemSwitchAttackType.ts
app/frontend/src/functions/: procgen.ts  sha256.ts
app/frontend/src/hooks/: useSessionKeypair.ts
app/frontend/src/idl/: attack.json  block_attack.json  character.json  create_room.json  move_character.json  room.json  spawn.json  switch_attack_type.json
app/frontend/src/types/: attack.ts  block_attack.ts  character.ts  create_room.ts  move_character.ts  room.ts  spawn.ts  switch_attack_type.ts
app/partykit/: package-lock.json  package.json  partykit.json
app/partykit/party/: index.ts
crates/types/: Cargo.toml
migrations/: deploy.ts
programs-ecs/components/Character/: Cargo.toml
programs-ecs/components/character/: Cargo.toml
programs-ecs/components/character/src/: lib.rs
programs-ecs/components/room/: Cargo.toml
programs-ecs/components/room/src/: lib.rs
programs-ecs/systems/Spawn/: Cargo.toml
programs-ecs/systems/Spawn/src/: lib.rs
programs-ecs/systems/attack/: Cargo.toml
programs-ecs/systems/block_attack/: Cargo.toml
programs-ecs/systems/create_room/: Cargo.toml
programs-ecs/systems/create_room/src/: lib.rs
programs-ecs/systems/move_character/: Cargo.toml
programs-ecs/systems/spawn/: Cargo.toml
programs-ecs/systems/spawn/src/: lib.rs
programs-ecs/systems/switch_attack_type/: Cargo.toml
programs-ecs/systems/switch_attack_type/src/: lib.rs
programs/imephemeral/: Cargo.toml
programs/imephemeral/src/: lib.rs
tests/: imephemeral.ts
(+4 files in other folders)
