[package]
name = "create_room"
version = "0.1.7"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_room"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.7"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
room = { path = "../../components/room", features = ["cpi"] }